--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,11 @@
 {
+  "extends": "./tsconfig.base",
   "compilerOptions": {
-    "strict": true,
-    "target": "es2019",
-    "module": "commonjs",
-    "composite": true,
-    "incremental": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "rootDir": "src",
-    "outDir": "lib",
+    "baseUrl": ".",
+    "paths": {
+      "@koishijs/*": ["packages/*/src"],
+      "create-koishi": ["packages/create/src"],
+    },
   },
-  "include": [
-    "src",
-  ],
+  "files": [],
 }
