--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -6,9 +6,10 @@
     "node": "^14 || >=16"
   },
   "files": [
-    "lib"
+    "lib",
+    "bin.js"
   ],
-  "bin": "lib/index.js",
+  "bin": "bin.js",
   "author": "Shigma <shigma10826@gmail.com>",
   "license": "MIT",
   "repository": {
@@ -36,7 +37,8 @@
     "boilerplate"
   ],
   "devDependencies": {
-    "@types/tar": "^6.1.3",
+    "@types/tar": "^6.1.4",
+    "@types/prompts": "^2.4.4",
     "@types/which-pm-runs": "^1.0.0",
     "@types/yargs-parser": "^21.0.0"
   },
