--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,18 +1,19 @@
 {
   "name": "@koishijs/scripts",
   "description": "Workspace Scripts for Koishi",
-  "version": "4.1.2",
+  "version": "4.1.5",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "engines": {
     "node": ">=12.0.0"
   },
   "files": [
+    "bin.js",
     "lib",
     "template"
   ],
   "bin": {
-    "koishi-scripts": "lib/bin.js"
+    "koishi-scripts": "bin.js"
   },
   "author": "Shigma <shigma10826@gmail.com>",
   "license": "MIT",
@@ -33,13 +34,14 @@
     "build": "tsc -b"
   },
   "peerDependencies": {
-    "@koishijs/client": "^5.4.2"
+    "@koishijs/client": "^5.6.2"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
     "@types/js-yaml": "^4.0.5",
+    "@types/prompts": "^2.4.4",
     "@types/which-pm-runs": "^1.0.0",
-    "yakumo": "^0.3.9"
+    "yakumo": "^0.3.12"
   },
   "dependencies": {
     "cac": "^6.7.14",
