--- a/packages/scripts/template/package.json
+++ b/packages/scripts/template/package.json
@@ -1,9 +1,9 @@
 {
   "version": "0.0.1",
-  "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "main": "src/index.js",
+  "typings": "src/index.d.ts",
   "files": [
-    "lib",
+    "src",
     "dist"
   ],
   "license": "MIT",
