--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -1,10 +1,11 @@
 {
   "name": "create-koishi",
   "description": "Setup a Koishi application",
-  "version": "6.0.1",
+  "version": "6.1.0",
   "engines": {
-    "node": "^14 || >=16"
+    "node": "^16.0.0 || >=18.0.0"
   },
+  "main": "./lib/index.js",
   "files": [
     "lib",
     "bin.js"
@@ -37,17 +38,17 @@
     "boilerplate"
   ],
   "devDependencies": {
-    "@types/tar": "^6.1.4",
+    "@types/tar": "^6.1.5",
     "@types/prompts": "^2.4.4",
     "@types/which-pm-runs": "^1.0.0",
     "@types/yargs-parser": "^21.0.0"
   },
   "dependencies": {
-    "axios": "~1.1.3",
+    "axios": "^1.4.0",
     "get-registry": "^1.1.0",
     "kleur": "^4.1.5",
     "prompts": "^2.4.2",
-    "tar": "^6.1.13",
+    "tar": "^6.1.15",
     "which-pm-runs": "^1.1.0",
     "yargs-parser": "^21.1.1"
   }
