feat: support monorepo setup, close koishijs/koishi#1229

--- a/packages/scripts/template/tsconfig.base.json
+++ b/packages/scripts/template/tsconfig.base.json
@@ -12,8 +12,9 @@
     "moduleResolution": "node",
     "jsx": "react-jsx",
     "jsxImportSource": "@satorijs/element",
-  },
-  "include": [
-    "src",
-  ],
+    "types": [
+      "node",
+      "yml-register/types"
+    ]
+  }
 }
