chore: bump versions

--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -8,6 +8,7 @@
   "main": "./lib/index.js",
   "files": [
     "lib",
+    "src",
     "bin.js"
   ],
   "bin": "bin.js",
@@ -30,7 +31,6 @@
     "koishi",
     "discord",
     "telegram",
-    "onebot",
     "create",
     "scaffold",
     "template",
@@ -38,17 +38,17 @@
     "boilerplate"
   ],
   "devDependencies": {
-    "@types/tar": "^6.1.5",
-    "@types/prompts": "^2.4.4",
-    "@types/which-pm-runs": "^1.0.0",
-    "@types/yargs-parser": "^21.0.0"
+    "@types/prompts": "^2.4.9",
+    "@types/tar": "^6.1.10",
+    "@types/which-pm-runs": "^1.0.2",
+    "@types/yargs-parser": "^21.0.3"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.6.2",
     "get-registry": "^1.1.0",
     "kleur": "^4.1.5",
     "prompts": "^2.4.2",
-    "tar": "^6.1.15",
+    "tar": "^6.2.0",
     "which-pm-runs": "^1.1.0",
     "yargs-parser": "^21.1.1"
   }
