--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@root/scripts",
   "private": true,
+  "type": "module",
   "version": "1.0.0",
   "workspaces": [
     "packages/*"
@@ -18,20 +19,16 @@
   },
   "devDependencies": {
     "@types/mocha": "^9.1.1",
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.10.2",
     "c8": "^7.14.0",
-    "esbuild": "^0.18.14",
-    "esbuild-register": "^3.4.2",
+    "esbuild": "^0.18.20",
+    "esbuild-register": "^3.5.0",
     "mocha": "^9.2.2",
     "shx": "^0.3.4",
-    "typescript": "^5.1.6",
-    "yakumo": "^0.3.13",
-    "yakumo-esbuild": "^0.3.25",
-    "yakumo-mocha": "^0.3.1",
-    "yakumo-publish": "^0.3.4",
-    "yakumo-publish-sync": "^0.3.3",
-    "yakumo-tsc": "^0.3.12",
-    "yakumo-upgrade": "^0.3.4",
-    "yakumo-version": "^0.3.4"
+    "typescript": "^5.3.2",
+    "yakumo": "^1.0.0-beta.3",
+    "yakumo-esbuild": "^1.0.0-beta.2",
+    "yakumo-mocha": "^1.0.0-beta.2",
+    "yakumo-tsc": "^1.0.0-beta.1"
   }
 }
