--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@koishijs/scripts",
   "description": "Workspace Scripts for Koishi",
-  "version": "4.5.1",
+  "version": "4.5.2",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "engines": {
@@ -10,6 +10,7 @@
   "files": [
     "bin.js",
     "lib",
+    "src",
     "template"
   ],
   "bin": {
@@ -34,14 +35,14 @@
     "build": "tsc -b"
   },
   "peerDependencies": {
-    "@koishijs/client": "^5.16.1"
+    "@koishijs/client": "^5.27.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
-    "@types/js-yaml": "^4.0.5",
-    "@types/prompts": "^2.4.4",
-    "@types/which-pm-runs": "^1.0.0",
-    "yakumo": "^0.3.13"
+    "@types/js-yaml": "^4.0.9",
+    "@types/prompts": "^2.4.9",
+    "@types/which-pm-runs": "^1.0.2",
+    "yakumo": "^1.0.0-beta.3"
   },
   "dependencies": {
     "cac": "^6.7.14",
