--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,6 +3,7 @@
     "strict": true,
     "target": "es2022",
     "module": "commonjs",
+    "sourceMap": true,
     "declaration": true,
     "composite": true,
     "incremental": true,
