--- a/yakumo.yml
+++ b/yakumo.yml
@@ -1,8 +1,11 @@
-require:
-  - yakumo-esbuild
-  - yakumo-mocha
-  - yakumo-publish
-  - yakumo-publish-sync
-  - yakumo-tsc
-  - yakumo-upgrade
-  - yakumo-version
+- name: yakumo
+  config:
+    pipeline:
+      build:
+        - tsc
+        - esbuild
+      clean:
+        - tsc --clean
+- name: yakumo-esbuild
+- name: yakumo-mocha
+- name: yakumo-tsc
