--- a/package.json
+++ b/package.json
@@ -8,27 +8,30 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "yakumo tsc",
+    "build": "yakumo build",
     "bump": "yakumo version",
     "dep": "yakumo upgrade",
     "pub": "yakumo publish",
+    "lint": "eslint --cache",
     "test": "yakumo mocha -r esbuild-register -t 10000",
     "test:text": "shx rm -rf coverage && c8 -r text yarn test",
     "test:json": "shx rm -rf coverage && c8 -r json yarn test",
     "test:html": "shx rm -rf coverage && c8 -r html yarn test"
   },
   "devDependencies": {
+    "@cordisjs/eslint-config": "^1.0.4",
     "@types/mocha": "^9.1.1",
     "@types/node": "^20.10.2",
     "c8": "^7.14.0",
     "esbuild": "^0.18.20",
     "esbuild-register": "^3.5.0",
+    "eslint": "^8.55.0",
     "mocha": "^9.2.2",
     "shx": "^0.3.4",
     "typescript": "^5.3.2",
-    "yakumo": "^1.0.0-beta.3",
-    "yakumo-esbuild": "^1.0.0-beta.2",
+    "yakumo": "^1.0.0-beta.11",
+    "yakumo-esbuild": "^1.0.0-beta.5",
     "yakumo-mocha": "^1.0.0-beta.2",
-    "yakumo-tsc": "^1.0.0-beta.1"
+    "yakumo-tsc": "^1.0.0-beta.3"
   }
 }
